--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description: "Archive for my memory"
 meta_description: "Arquivo with links, tutorials, personal contents."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: 'https://blog.jrmessias.com.br'
-url: 'https://blog.jrmessias.com.br'
+baseurl: '/'
+#url: 'https://blog.jrmessias.com.br'
 google_analytics: 'UA-46278016-1'
 disqus: 'jrmessias'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
